--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -4,65 +4,67 @@ title: "Publications"
 permalink: /publications/
 author_profile: true
 ---
+
+<h2>Publications</h2>
 <ul>
 
   <li>
     <strong>Nanofluidic logic with mechano–ionic memristive switches</strong><br>
-    Emmerich*, Theo; Teng*, Yunfei; Ronceray*, Nathan; Lopriore, Edoardo; Chiesa, Riccardo; Chernev, Andrey; Artemov, Vasily; Di Ventra, Massimiliano; Kis, Andras; Radenovic, Aleksandra<br>
+    Theo Emmerich*, Yunfei Teng*, Nathan Ronceray*, Edoardo Lopriore, Riccardo Chiesa, Andrey Chernev, Vasily Artemov, Massimiliano Di Ventra, Andras Kis, Aleksandra Radenovic<br>
     <em>Nature Electronics</em>, 2024
   </li>
 
   <li>
     <strong>Nanofluidics</strong><br>
-    Emmerich*, Theo; Ronceray*, Nathan; Agrawal, Kumar Varoon; Garaj, Slaven; Kumar, Manish; Noy, Aleksandr; Radenovic, Aleksandra<br>
+    Theo Emmerich*, Nathan Ronceray*, Kumar Varoon Agrawal, Slaven Garaj, Manish Kumar, Aleksandr Noy, Aleksandra Radenovic<br>
     <em>Nature Reviews Methods Primers</em>, 2024
   </li>
 
   <li>
     <strong>Lumen charge governs memristive ion transport in β-barrel nanopores</strong><br>
-    Mayer*, Simon Finn; Mitsioni*, Marianna; van den Heuvel, Lukas; Robin, Paul; Ronceray, Nathan; Marcaida, Maria Jose; Abriata, Luciano A; Krapp, Lucien F; Anton, Jana S; Soussou, Sarah; et al.<br>
+    Simon Finn Mayer*, Marianna Mitsioni*, Lukas van den Heuvel, Paul Robin, Nathan Ronceray, Maria Jose Marcaida, Luciano A. Abriata, Lucien F. Krapp, Jana S. Anton, Sarah Soussou, et al.<br>
     <em>bioRxiv</em>, 2024
   </li>
 
   <li>
     <strong>Disentangling 1/f noise from confined ion dynamics</strong><br>
-    Robin*, Paul; Lizée*, Mathieu; Yang, Qian; Emmerich, Théo; Siria, Alessandro; Bocquet, Lydéric<br>
+    Paul Robin*, Mathieu Lizée*, Qian Yang, Théo Emmerich, Alessandro Siria, Lydéric Bocquet<br>
     <em>Faraday Discussions</em>, 2023
   </li>
 
   <li>
     <strong>Long-term memory and synapse-like dynamics in two-dimensional nanofluidic channels</strong><br>
-    Robin*, P; Emmerich*, T; Ismail*, A; Niguès, A; You, Y; Nam, G-H; Keerthi, A; Siria, A; Geim, AK; Radha, B; et al.<br>
+    Paul Robin*, Théo Emmerich*, Ahmed Ismail*, Antoine Niguès, Yifan You, Gyu-Hyeong Nam, Ashok Keerthi, Alessandro Siria, Andre Geim, Radha Boya, et al.<br>
     <em>Science</em>, 2023
   </li>
 
   <li>
     <strong>Enhanced nanofluidic transport in activated carbon nanoconduits</strong><br>
-    Emmerich, Theo; Vasu, Kalangi S; Niguès, Antoine; Keerthi, Ashok; Radha, Boya; Siria, Alessandro; Bocquet, Lydéric<br>
+    Théo Emmerich, Kalangi S. Vasu, Antoine Niguès, Ashok Keerthi, Radha Boya, Alessandro Siria, Lydéric Bocquet<br>
     <em>Nature Materials</em>, 2022
   </li>
 
   <li>
     <strong>Exalted epi-osmotic energy harvesting in activated carbon nanochannels</strong><br>
-    Emmerich, Theo; Vasu, KS; Nigues, Antoine; Keerthi, Ashok; Boya, Radha; Siria, Alessandro; Bocquet, Lyderic; et al.<br>
+    Théo Emmerich, Kalangi S. Vasu, Antoine Niguès, Ashok Keerthi, Radha Boya, Alessandro Siria, Lydéric Bocquet, et al.<br>
     <em>APS March Meeting Abstracts</em>, 2021
   </li>
 
   <li>
     <strong>Activated carbon nanofluidics: from blue energy to ionic memory</strong><br>
-    Emmerich, Théo<br>
+    Théo Emmerich<br>
     <em>Ph.D. thesis, PSL</em>, 2021
   </li>
 
   <li>
     <strong>Capturing Bubbles and Preventing Foam Using Aerophilic Surfaces</strong><br>
-    Rapoport, Leonid; Emmerich, Theo; Varanasi, Kripa K<br>
+    Leonid Rapoport, Théo Emmerich, Kripa K. Varanasi<br>
     <em>Advanced Materials Interfaces</em>, 2020
   </li>
 
   <li>
     <strong>Growth rates and spontaneous navigation of condensate droplets through randomly structured textures</strong><br>
-    Sharma, Chander Shekhar; Combe, Juliette; Giger, Markus; Emmerich, Theo; Poulikakos, Dimos<br>
+    Chander Shekhar Sharma, Juliette Combe, Markus Giger, Théo Emmerich, Dimos Poulikakos<br>
     <em>ACS Nano</em>, 2017
   </li>
 
