--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -33,7 +33,7 @@ author_profile: true
 
   <li>
     <strong>Long-term memory and synapse-like dynamics in two-dimensional nanofluidic channels</strong><br>
-    Paul Robin*, Théo Emmerich*, Abdulghani Ismail*, Antoine Niguès, Yi You, Gyu-Hyeong Nam, Ashok Keerthi, Alessandro Siria, Andre Geim, Radha Boya, et al.<br>
+    Paul Robin*, Théo Emmerich*, Abdulghani Ismail*, Antoine Niguès, Yi You, Gyu-Hyeong Nam, Ashok Keerthi, Alessandro Siria, Andre Geim, Radha Boya, Lydéric Bocquet<br>
     <em>Science</em>, 2023
   </li>
 
