--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -7,6 +7,20 @@ author_profile: true
 
 <ul>
 
+  
+ <li>
+    <strong>Direct imaging reveals electromechanical ionic memory in 2D nanochannels</strong><br>
+    Kalluvadi Veetil Saurav, Nathan Ronceray, Baptiste Coquinot, Agustin D. Pizarro, Ashok Keerthi, Theo Emmerich, Aleksandra Radenovic, Boya Radha
+<br>
+    <em>arXiv</em>, 2025
+  </li>
+  
+  <li>
+    <strong>Lumen charge governs gated ion transport in β-barrel nanopores</strong><br>
+    Simon Finn Mayer*, Marianna Mitsioni*, Lukas van den Heuvel, Paul Robin, Nathan Ronceray, Maria Jose Marcaida, Luciano A. Abriata, Lucien F. Krapp, Jana S. Anton, Sarah Soussou, et al.<br>
+    <em>Nature Nanotechnology (In press), bioRxiv</em>, 2025
+  </li>
+  
   <li>
     <strong>Nanofluidic logic with mechano–ionic memristive switches</strong><br>
     Theo Emmerich*, Yunfei Teng*, Nathan Ronceray*, Edoardo Lopriore, Riccardo Chiesa, Andrey Chernev, Vasily Artemov, Massimiliano Di Ventra, Andras Kis, Aleksandra Radenovic<br>
@@ -17,12 +31,6 @@ author_profile: true
     <strong>Nanofluidics</strong><br>
     Theo Emmerich*, Nathan Ronceray*, Kumar Varoon Agrawal, Slaven Garaj, Manish Kumar, Aleksandr Noy, Aleksandra Radenovic<br>
     <em>Nature Reviews Methods Primers</em>, 2024
-  </li>
-
-  <li>
-    <strong>Lumen charge governs memristive ion transport in β-barrel nanopores</strong><br>
-    Simon Finn Mayer*, Marianna Mitsioni*, Lukas van den Heuvel, Paul Robin, Nathan Ronceray, Maria Jose Marcaida, Luciano A. Abriata, Lucien F. Krapp, Jana S. Anton, Sarah Soussou, et al.<br>
-    <em>bioRxiv</em>, 2024
   </li>
 
   <li>
