--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -35,37 +35,37 @@ author_profile: true
 
   <li>
     <strong>Disentangling 1/f noise from confined ion dynamics</strong><br>
-    Paul Robin*, Mathieu Lizée*, Qian Yang, Théo Emmerich, Alessandro Siria, Lydéric Bocquet<br>
+    Paul Robin*, Mathieu Lizée*, Qian Yang, Theo Emmerich, Alessandro Siria, Lydéric Bocquet<br>
     <em>Faraday Discussions</em>, 2023
   </li>
 
   <li>
     <strong>Long-term memory and synapse-like dynamics in two-dimensional nanofluidic channels</strong><br>
-    Paul Robin*, Théo Emmerich*, Abdulghani Ismail*, Antoine Niguès, Yi You, Gyu-Hyeong Nam, Ashok Keerthi, Alessandro Siria, Andre Geim, Radha Boya, Lydéric Bocquet<br>
+    Paul Robin*, Theo Emmerich*, Abdulghani Ismail*, Antoine Niguès, Yi You, Gyu-Hyeong Nam, Ashok Keerthi, Alessandro Siria, Andre Geim, Radha Boya, Lydéric Bocquet<br>
     <em>Science</em>, 2023
   </li>
 
   <li>
     <strong>Enhanced nanofluidic transport in activated carbon nanoconduits</strong><br>
-    Théo Emmerich, Kalangi S. Vasu, Antoine Niguès, Ashok Keerthi, Radha Boya, Alessandro Siria, Lydéric Bocquet<br>
+    Theo Emmerich, Kalangi S. Vasu, Antoine Niguès, Ashok Keerthi, Radha Boya, Alessandro Siria, Lydéric Bocquet<br>
     <em>Nature Materials</em>, 2022
   </li>
 
   <li>
     <strong>Activated carbon nanofluidics: from blue energy to ionic memory</strong><br>
-    Théo Emmerich<br>
+    Theo Emmerich<br>
     <em>Ph.D. thesis, PSL</em>, 2021
   </li>
 
   <li>
     <strong>Capturing Bubbles and Preventing Foam Using Aerophilic Surfaces</strong><br>
-    Leonid Rapoport, Théo Emmerich, Kripa K. Varanasi<br>
+    Leonid Rapoport, Theo Emmerich, Kripa K. Varanasi<br>
     <em>Advanced Materials Interfaces</em>, 2020
   </li>
 
   <li>
     <strong>Growth rates and spontaneous navigation of condensate droplets through randomly structured textures</strong><br>
-    Chander Shekhar Sharma, Juliette Combe, Markus Giger, Théo Emmerich, Dimos Poulikakos<br>
+    Chander Shekhar Sharma, Juliette Combe, Markus Giger, Theo Emmerich, Dimos Poulikakos<br>
     <em>ACS Nano</em>, 2017
   </li>
 
