--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -17,7 +17,7 @@ author_profile: true
   
   <li>
     <strong>Lumen charge governs gated ion transport in β-barrel nanopores</strong><br>
-    Simon Finn Mayer*, Marianna Mitsioni*, Lukas van den Heuvel, Paul Robin, Nathan Ronceray, Maria Jose Marcaida, Luciano A. Abriata, Lucien F. Krapp, Jana S. Anton, Sarah Soussou, et al.<br>
+    Simon Finn Mayer*, Marianna Mitsioni*, Paul Robin, Lukas van den Heuvel, Nathan Ronceray, Maria Jose Marcaida, Luciano A. Abriata, Lucien F. Krapp, Jana S. Anton, Sarah Soussou, et al.<br>
     <em>Nature Nanotechnology (In press), bioRxiv</em>, 2025
   </li>
   
