--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -7,66 +7,74 @@ author_profile: true
 
 <ul>
 
-  
- <li>
+  <li>
     <strong>Direct imaging reveals electromechanical ionic memory in 2D nanochannels</strong><br>
-    Kalluvadi Veetil Saurav, Nathan Ronceray, Baptiste Coquinot, Agustin D. Pizarro, Ashok Keerthi, Theo Emmerich, Aleksandra Radenovic, Boya Radha
-<br>
-    <em>arXiv</em>, 2025
+    Kalluvadi Veetil Saurav, Nathan Ronceray, Baptiste Coquinot, Agustin D. Pizarro, Ashok Keerthi, Theo Emmerich, Aleksandra Radenovic, Boya Radha<br>
+    <em>arXiv</em>, 2025<br>
+    [<a href="https://arxiv.org/abs/2509.11637" target="_blank" rel="noopener noreferrer">arXiv</a>]
   </li>
-  
+
   <li>
     <strong>Lumen charge governs gated ion transport in β-barrel nanopores</strong><br>
     Simon Finn Mayer*, Marianna Mitsioni*, Paul Robin, Lukas van den Heuvel, Nathan Ronceray, Maria Jose Marcaida, Luciano A. Abriata, Lucien F. Krapp, Jana S. Anton, Sarah Soussou, et al.<br>
-    <em>Nature Nanotechnology (In press), bioRxiv</em>, 2025
+    <em>Nature Nanotechnology (In press), bioRxiv</em>, 2025<br>
+    [<a href="https://www.biorxiv.org/content/10.1101/2024.09.26.615172v4" target="_blank" rel="noopener noreferrer">bioRxiv</a>]
   </li>
-  
+
   <li>
     <strong>Nanofluidic logic with mechano–ionic memristive switches</strong><br>
     Theo Emmerich*, Yunfei Teng*, Nathan Ronceray*, Edoardo Lopriore, Riccardo Chiesa, Andrey Chernev, Vasily Artemov, Massimiliano Di Ventra, Andras Kis, Aleksandra Radenovic<br>
-    <em>Nature Electronics</em>, 2024
+    <em>Nature Electronics</em>, 2024<br>
+    [<a href="https://www.nature.com/articles/s41928-024-01137-9" target="_blank" rel="noopener noreferrer">Publisher</a>] ·
   </li>
 
   <li>
     <strong>Nanofluidics</strong><br>
     Theo Emmerich*, Nathan Ronceray*, Kumar Varoon Agrawal, Slaven Garaj, Manish Kumar, Aleksandr Noy, Aleksandra Radenovic<br>
-    <em>Nature Reviews Methods Primers</em>, 2024
+    <em>Nature Reviews Methods Primers</em>, 2024<br>
+    [<a href="https://www.nature.com/articles/s43586-024-00355-x" target="_blank" rel="noopener noreferrer">Publisher</a>] ·
   </li>
 
   <li>
     <strong>Disentangling 1/f noise from confined ion dynamics</strong><br>
     Paul Robin*, Mathieu Lizée*, Qian Yang, Theo Emmerich, Alessandro Siria, Lydéric Bocquet<br>
-    <em>Faraday Discussions</em>, 2023
+    <em>Faraday Discussions</em>, 2023<br>
+    [<a href="https://pubs.rsc.org/en/content/articlelanding/2023/fd/d3fd00035d" target="_blank" rel="noopener noreferrer">Publisher</a>] ·
   </li>
 
   <li>
     <strong>Long-term memory and synapse-like dynamics in two-dimensional nanofluidic channels</strong><br>
     Paul Robin*, Theo Emmerich*, Abdulghani Ismail*, Antoine Niguès, Yi You, Gyu-Hyeong Nam, Ashok Keerthi, Alessandro Siria, Andre Geim, Radha Boya, Lydéric Bocquet<br>
-    <em>Science</em>, 2023
+    <em>Science</em>, 2023<br>
+    [<a href="https://www.science.org/doi/10.1126/science.adc9931" target="_blank" rel="noopener noreferrer">Publisher</a>] ·
   </li>
 
   <li>
     <strong>Enhanced nanofluidic transport in activated carbon nanoconduits</strong><br>
     Theo Emmerich, Kalangi S. Vasu, Antoine Niguès, Ashok Keerthi, Radha Boya, Alessandro Siria, Lydéric Bocquet<br>
-    <em>Nature Materials</em>, 2022
+    <em>Nature Materials</em>, 2022<br>
+    [<a href="https://www.nature.com/articles/s41563-022-01229-x" target="_blank" rel="noopener noreferrer">Publisher</a>] ·
   </li>
 
   <li>
     <strong>Activated carbon nanofluidics: from blue energy to ionic memory</strong><br>
     Theo Emmerich<br>
-    <em>Ph.D. thesis, PSL</em>, 2021
-  </li>
+    <em>Ph.D. thesis, PSL</em>, 2021<br>
+ [<a href=https://ens.hal.science/tel-03603163/" target="_blank" rel="noopener noreferrer">Publisher</a>] ·
+    </li>
 
   <li>
     <strong>Capturing Bubbles and Preventing Foam Using Aerophilic Surfaces</strong><br>
     Leonid Rapoport, Theo Emmerich, Kripa K. Varanasi<br>
-    <em>Advanced Materials Interfaces</em>, 2020
+    <em>Advanced Materials Interfaces</em>, 2020<br>
+    [<a href="https://onlinelibrary.wiley.com/doi/10.1002/admi.201901599" target="_blank" rel="noopener noreferrer">Publisher</a>] ·
   </li>
 
   <li>
     <strong>Growth rates and spontaneous navigation of condensate droplets through randomly structured textures</strong><br>
     Chander Shekhar Sharma, Juliette Combe, Markus Giger, Theo Emmerich, Dimos Poulikakos<br>
-    <em>ACS Nano</em>, 2017
+    <em>ACS Nano</em>, 2017<br>
+    [<a href="https://pubs.acs.org/doi/10.1021/acsnano.6b07471" target="_blank" rel="noopener noreferrer">Publisher</a>] ·
   </li>
 
 </ul>
