--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -9,7 +9,7 @@ author_profile: true
 
   <li>
     <strong><a href="https://arxiv.org/abs/2509.11637" target="_blank" rel="noopener noreferrer">Direct imaging reveals electromechanical ionic memory in 2D nanochannels</a></strong><br>
-    Kalluvadi Veetil Saurav, Nathan Ronceray, Baptiste Coquinot, Agustin D. Pizarro, Ashok Keerthi, Theo Emmerich, Aleksandra Radenovic, Boya Radha<br>
+    Kalluvadi Veetil Saurav*, Nathan Ronceray*, Baptiste Coquinot, Agustin D. Pizarro, Ashok Keerthi, Theo Emmerich, Aleksandra Radenovic, Boya Radha<br>
     <em>arXiv</em>, 2025
   </li>
 
