Update publication details in publications.html
Updated publication link and removed 'In press' note.

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -14,9 +14,9 @@ author_profile: true
   </li>
 
   <li>
-    <strong><a href="https://www.biorxiv.org/content/10.1101/2024.09.26.615172v4" target="_blank" rel="noopener noreferrer">Lumen charge governs gated ion transport in β-barrel nanopores</a></strong><br>
+    <strong><a href="https://www.nature.com/articles/s41565-025-02052-6" target="_blank" rel="noopener noreferrer">Lumen charge governs gated ion transport in β-barrel nanopores</a></strong><br>
     Simon Finn Mayer*, Marianna Mitsioni*, Paul Robin, Lukas van den Heuvel, Nathan Ronceray, Maria Jose Marcaida, Luciano A. Abriata, Lucien F. Krapp, Jana S. Anton, Sarah Soussou, et al.<br>
-    <em>Nature Nanotechnology (In press), bioRxiv</em>, 2025
+    <em>Nature Nanotechnology, 2025
   </li>
 
   <li>
