Fix formatting of publication details in HTML

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -16,7 +16,7 @@ author_profile: true
   <li>
     <strong><a href="https://www.nature.com/articles/s41565-025-02052-6" target="_blank" rel="noopener noreferrer">Lumen charge governs gated ion transport in β-barrel nanopores</a></strong><br>
     Simon Finn Mayer*, Marianna Mitsioni*, Paul Robin, Lukas van den Heuvel, Nathan Ronceray, Maria Jose Marcaida, Luciano A. Abriata, Lucien F. Krapp, Jana S. Anton, Sarah Soussou, et al.<br>
-    <em>Nature Nanotechnology, 2025
+    <em>Nature Nanotechnology</em>, 2025
   </li>
 
   <li>
